--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ footer a:hover {
 
 /* Responsive design */
 @media (max-width: 600px) {
-    .container {
+    .content {
         max-width: 100%;
     }
     
